Fixed about page bugs

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed&family=Karla&family=Poor+Story&family=Poppins:wght@400;500&display=swap" 
     rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="./Assets/ICONS/icon-webpage.svg">
-    <link rel="stylesheet" href="../index.css">
+    <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./About/about.css">
     
 </head>
@@ -74,14 +74,14 @@
                         </p>
                     </div>
                     <div id="about-right-text">
-                        <img src="../Assets/graduation.png" alt="graduation">
+                        <img src="./Assets/graduation.png" alt="graduation">
                     </div>
                 </div>
             </div>
             <div id="about-page-2">
                 <div id="about-content">
                     <div id="about-right-text">
-                        <img src="../Assets/computer.png" alt="graduation">
+                        <img src="./Assets/computer.png" alt="graduation">
                         <p id="image-text"> (Jumping on the AI Image bandwagon)</p>
                     </div>
                     <div id="about-left-text2">
@@ -106,8 +106,8 @@
                         </span>
                     </div>
                     <div id="resume-button">
-                        <img src="../Assets/About/contact-resume.png">
-                        <button id="resume-text"><img src="../Assets/About/download-icon.svg" alt=""><a href="Assets/Resume/Resume - Foo Joo Wee.pdf" download="">Download Resume</a></button>
+                        <img src="./Assets/About/contact-resume.png">
+                        <button id="resume-text"><img src="./Assets/About/download-icon.svg" alt=""><a href="Assets/Resume/Resume - Foo Joo Wee.pdf" download="">Download Resume</a></button>
                     </div>
                 </div>
             </div>
