Fixed about css reference

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="./Assets/ICONS/icon-webpage.svg">
     <link rel="stylesheet" href="./index.css">
-    <link rel="stylesheet" href="./About/about.css">
+    <link rel="stylesheet" href="./about.css">
     
 </head>
 
