--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="./Assets/ICONS/icon-webpage.svg">
     <link rel="stylesheet" href="./index.css">
-    <link rel="stylesheet" href="./about.css">
+    <link rel="stylesheet" href="./About/about.css">
     
 </head>
 
@@ -121,8 +121,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script> 
         $(function(){
-          $("#nav").load("../header.html"); 
-          $("#footer").load("../footer.html"); 
+          $("#nav").load("./header.html"); 
+          $("#footer").load("./footer.html"); 
         });
     </script> 
     <script src="./About/about.js"></script>
