Mobile responsive design for Projects and About

--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,9 @@
                 <section>
                     <div id="projects-main">
                         <div class="featured-projects">
-                            <h1>FEATURED PROJECTS</h1>
+                            <div>
+                                <h1>FEATURED PROJECTS</h1>
+                            </div>
                             <div class="featured-project-1">
                                 <div class="project-container">
                                     <div class="project-image">
@@ -131,7 +133,7 @@
                                             </a>
                                         </div>
                                         <div class="other-project-container-description">
-                                            A simply piano app with notes ranging from F2 to E5. Customizable keys to allow you to play your favourite tunes! More features coming soon.
+                                            A piano app with notes ranging from F2 to E5. Customizable keyboard keys to allow you to play your favourite tunes (limited  functionality on mobile) ! More features coming soon.
                                         </div>
                                         <div class="project-container-techstack">
                                             <p>HTML/CSS</p>
