--- a/about.html
+++ b/about.html
@@ -22,7 +22,6 @@
     </header>
     <!-- Section for main content -->
     <div id="main-container">
-        <div id="dummy-div"></div>
         <div id="about-main-wrapper">
             <div class="red-line">
             </div>
@@ -59,7 +58,12 @@
                 <div class="blue-line"></div>
                 <div class="blue-line"></div>
                 <div class="blue-line"></div>
-
+                <div class="add-blue-line">
+                    <div class="blue-line"></div>
+                    <div class="blue-line"></div>
+                    <div class="blue-line"></div>
+                    <div class="blue-line"></div>
+                </div>
             </div>
             <div id="about-page-1">
                 <div id="about-header">
