Fixing about page look

--- a/about.html
+++ b/about.html
@@ -63,6 +63,15 @@
                     <div class="blue-line"></div>
                     <div class="blue-line"></div>
                     <div class="blue-line"></div>
+                    <div class="blue-line"></div>
+                    <div class="blue-line"></div>
+                    <div class="blue-line"></div>
+                    <div class="blue-line"></div>
+                    <div class="blue-line"></div>
+                    <div class="blue-line"></div>
+                    <div class="blue-line"></div>
+                    <div class="blue-line"></div>
+
                 </div>
             </div>
             <div id="about-page-1">
