Added responsive layout for blog and contact

--- a/blog.html
+++ b/blog.html
@@ -26,34 +26,40 @@
             <div id="main-content">
                 <section>
                     <div class="latest-posts">
+                        <div class="blog-header">
+                            <h2>LATEST POSTS</h2>
+                        </div>
                         <div class="blog-main-wrapper">
-                            <div id="blog-header">
-                                <h2>LATEST POSTS</h2>
-                            </div>
-                            <div id="blog-content">
+                            <div class="blog-content">
                                 <div class="blog-latest-post">
                                     <img src="./Assets/Blog/cinque.png">
-                                    <a class="blog-title">First time in Europe (Part 1) - A Rundown of My Thoughts</a>
-                                    <div class="text-container">
-                                        <p class="blog-content">Ever travelled to Europe? I recently had the opportunity to embark on a 2-week trip to Europe. ver travelled to Europe? I recently had the opportunity to embark on a 2-week trip to Europe.</p>
+                                    <div class="blog-content-container">
+                                        <a class="blog-title">First time in Europe - My Thoughts</a>
+                                        <div class="text-container">
+                                            <p class="blog-content-preview">Ever travelled to Europe? I recently had the opportunity to embark on a 2-week trip to Europe. ver travelled to Europe? I recently had the opportunity to embark on a 2-week trip to Europe.</p>
+                                        </div>
+                                        <button>Read More</button>
                                     </div>
-                                    <button>Read More</button>
                                 </div>
                                 <div class="blog-latest-post">
                                     <img src="./Assets/Blog/marcuseurelius.jfif">
-                                    <a class="blog-title">A Story of Marcus Aurelius - The Journey of Stoicism</a>
-                                    <div class="text-container">
-                                        <p class="blog-content">Marcus Aurelius is a famous figure and is frequently talked about even in today's society. Recognized for his feats when he reigned as the Roman Emporer from 161 to 180AD, he is actuaklly more known for his contributions to Stoicism in philosophy. For those of you who are not familiar with philosophy, let me try my best to explain it based on my understanding. </p>
+                                    <div class="blog-content-container">
+                                        <a class="blog-title">A Story of Marcus Aurelius - The Journey of Stoicism</a>
+                                        <div class="text-container">
+                                            <p class="blog-content-preview">Marcus Aurelius is a famous figure and is frequently talked about even in today's society. Recognized for his feats when he reigned as the Roman Emporer from 161 to 180AD, he is actuaklly more known for his contributions to Stoicism in philosophy. For those of you who are not familiar with philosophy, let me try my best to explain it based on my understanding. </p>
+                                        </div>
+                                        <button>Read More</button>
                                     </div>
-                                    <button>Read More</button>
                                 </div>
                                 <div class="blog-latest-post">
                                     <img src="./Assets/Blog/skullduggery.jfif">
-                                    <a class="blog-title">My Childhood Book Series - Skulduggery Pleasant</a>
-                                    <div class="text-container">
-                                        <p class="blog-content">Magic. The single most used concept in fantasy world-building, and would remain as one of the most popular anchors in many major book and movie series. </p>
+                                    <div class="blog-content-container">
+                                        <a class="blog-title">My Childhood Book Series - Skulduggery Pleasant</a>
+                                        <div class="text-container">
+                                            <p class="blog-content-preview">Magic. The single most used concept in fantasy world-building, and would remain as one of the most popular anchors in many major book and movie series. </p>
+                                        </div>
+                                        <button>Read More</button>
                                     </div>
-                                    <button>Read More</button>
                                 </div>
                             </div>
                         </div>
@@ -63,34 +69,40 @@
         <!-- Section for main content2 -->
                 <section>
                     <div class="popular-posts">
+                        <div class="blog-header">
+                            <h2>POPULAR POSTS</h2>
+                        </div>
                         <div class="blog-main-wrapper">
-                            <div id="blog-header">
-                                <h2>POPULAR POSTS</h2>
-                            </div>
-                            <div id="blog-content">
+                            <div class="blog-content">
                                 <div class="blog-latest-post">
                                     <img src="./Assets/Blog/socialmedia.jfif">
-                                    <a class="blog-title">Social Commentary on Social Media</a>
-                                    <div class="text-container">
-                                        <p class="blog-content">Ever travelled to Europe? I recently had the opportunity to embark on a 2-week trip to Europe. ver travelled to Europe? I recently had the opportunity to embark on a 2-week trip to Europe.</p>
+                                    <div class="blog-content-container">
+                                        <a class="blog-title">Social Commentary on Social Media</a>
+                                        <div class="text-container">
+                                            <p class="blog-content-preview">Ever travelled to Europe? I recently had the opportunity to embark on a 2-week trip to Europe. ver travelled to Europe? I recently had the opportunity to embark on a 2-week trip to Europe.</p>
+                                        </div>
+                                        <button>Read More</button>
                                     </div>
-                                    <button>Read More</button>
                                 </div>
                                 <div class="blog-latest-post">
                                     <img src="./Assets/Blog/healthy.jfif">
-                                    <a class="blog-title">Being a Little Healthier than Yesterday</a>
-                                    <div class="text-container">
-                                        <p class="blog-content">Marcus Aurelius is a famous figure and is frequently talked about even in today's society. Recognized for his feats when he reigned as the Roman Emporer from 161 to 180AD, he is actuaklly more known for his contributions to Stoicism in philosophy. For those of you who are not familiar with philosophy, let me try my best to explain it based on my understanding. </p>
+                                    <div class="blog-content-container">
+                                        <a class="blog-title">Being a Little Healthier than Yesterday</a>
+                                        <div class="text-container">
+                                            <p class="blog-content-preview">Marcus Aurelius is a famous figure and is frequently talked about even in today's society. Recognized for his feats when he reigned as the Roman Emporer from 161 to 180AD, he is actuaklly more known for his contributions to Stoicism in philosophy. For those of you who are not familiar with philosophy, let me try my best to explain it based on my understanding. </p>
+                                        </div>
+                                        <button>Read More</button>
                                     </div>
-                                    <button>Read More</button>
                                 </div>
                                 <div class="blog-latest-post">
                                     <img src="./Assets/Blog/unsatisfaction.jfif">
-                                    <a class="blog-title">Unsatisfaction - The World and Cultural Norms</a>
-                                    <div class="text-container">
-                                        <p class="blog-content">Magic. The single most used concept in fantasy world-building, and would remain as one of the most popular anchors in many major book and movie series. </p>
+                                    <div class="blog-content-container">
+                                        <a class="blog-title">Unsatisfaction - The World and Cultural Norms</a>
+                                        <div class="text-container">
+                                            <p class="blog-content-preview">Magic. The single most used concept in fantasy world-building, and would remain as one of the most popular anchors in many major book and movie series. </p>
+                                        </div>
+                                        <button>Read More</button>
                                     </div>
-                                    <button>Read More</button>
                                 </div>
                             </div>
                         </div>
