--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,6 @@
     </header>
 
     <div id="main-container">
-        <div id="dummy-div"></div>
         <!-- Section for main content -->
         <section>
             <div id="main-content">
@@ -44,7 +43,6 @@
                             <!-- <p>If you are reading this page, chances are you have stumbled upon my website that I have included in my GitHub portfolio or resume.</p> -->
                             <p>I would love to hear your feedback on this website and other <a href="projects.html">projects</a> by me.
                             </p>
-                            <p>Feel free to reach out any time!</p>
                         </div>
                         <div id="contact-content">
                             <div id="contact-email">
@@ -65,41 +63,23 @@
                                 </div>
                             </div>
                         </div>
-                        <div id="contact-newsletter">Stay tuned for a newsletter coming your way! <a href="#">Register here!</a></div>
+                        <div class="content-header-text">
+                            <p>Feel free to reach out any time!</p>
+                        </div>
                     </div>
+                    
                 </div>
             </div>
         </section>
     </div>
     <!-- Footer Section -->
-    <footer id="footer">
+    <div class="footer-contact">
+        <footer id="footer">
 
-    </footer>
+        </footer>
+    </div>
+
     
-
-
-
-
-    <!-- <div id="main-page">
-        <div id="container1">
-            <div id="main-content">
-                <img src="Assets/left-arrow.svg">
-                <div id="main-content-text">
-                    <p>Hello there</p>
-                    <p style="font-size: 0.8em">(Please click on the arrays to learn more)</p>
-                </div>
-                <img src="Assets/right-arrow.svg">
-                <div id="main-page-buttons">
-                    <button>1</button>
-                    <button>2</button>
-                    <button>3</button>
-                    <button>4</button>
-                    <button>5</button>
-                <div>
-            </div>
-
-        </div>
-    <div> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script> 
         $(function(){
