Fixed mobile responsive issues

--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed&family=Karla&family=Poor+Story&family=Poppins:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./Contact/contact.css">
     <link rel="icon" type="image/x-icon" href="./Assets/ICONS/icon-webpage.svg">
     
 </head>
@@ -73,11 +74,9 @@
         </section>
     </div>
     <!-- Footer Section -->
-    <div class="footer-contact">
-        <footer id="footer">
+    <footer id="footer">
 
-        </footer>
-    </div>
+    </footer>
 
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
