--- a/about.html
+++ b/about.html
@@ -71,6 +71,11 @@
                     <div class="blue-line"></div>
                     <div class="blue-line"></div>
                     <div class="blue-line"></div>
+                    <div class="blue-line"></div>
+                    <div class="blue-line"></div>
+                    <div class="blue-line"></div>
+                    <div class="blue-line"></div>
+                    <div class="blue-line"></div>
 
                 </div>
             </div>
