Fixed mobile responsiveness

--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
                 <section>
                     <div id="projects-main">
                         <div class="featured-projects">
-                            <div>
+                            <div class="featured-projects-title">
                                 <h1>FEATURED PROJECTS</h1>
                             </div>
                             <div class="featured-project-1">
@@ -93,7 +93,9 @@
 
                         </div>
                         <div class="other-projects">
-                            <h1>OTHER PROJECTS</h1>
+                            <div class="other-projects-title">
+                                <h1>OTHER PROJECTS</h1>
+                            </div>
                             <div class="other-project-1">
                                 <div class="project-container">
                                     <div class="project-image">
