--- a/about.html
+++ b/about.html
@@ -76,6 +76,9 @@
                     <div class="blue-line"></div>
                     <div class="blue-line"></div>
                     <div class="blue-line"></div>
+                    <div class="blue-line"></div>
+                    <div class="blue-line"></div>
+                    <div class="blue-line"></div>
 
                 </div>
             </div>
