Added some background and fixed some mobile responsive bugs

--- a/blog.html
+++ b/blog.html
@@ -20,8 +20,8 @@
     <header id="nav">
 
     </header>
+
     <div id="main-container">
-        <div id="dummy-div"></div>
         <!-- Section for main content -->
             <div id="main-content">
                 <section>
@@ -34,9 +34,9 @@
                                 <div class="blog-latest-post">
                                     <img src="./Assets/Blog/cinque.png">
                                     <div class="blog-content-container">
-                                        <a class="blog-title">First time in Europe - My Thoughts</a>
+                                        <a href="#" class="blog-title">First time in Europe</a>
                                         <div class="text-container">
-                                            <p class="blog-content-preview">Ever travelled to Europe? I recently had the opportunity to embark on a 2-week trip to Europe. ver travelled to Europe? I recently had the opportunity to embark on a 2-week trip to Europe.</p>
+                                            <p class="blog-content-preview">Ever travelled to Europe? I recently had the opportunity to embark on a 2-week trip to Europe. Have you ever travelled to Europe? I recently had the opportunity to embark on a 2-week trip to Europe.</p>
                                         </div>
                                         <button>Read More</button>
                                     </div>
@@ -44,7 +44,7 @@
                                 <div class="blog-latest-post">
                                     <img src="./Assets/Blog/marcuseurelius.jfif">
                                     <div class="blog-content-container">
-                                        <a class="blog-title">A Story of Marcus Aurelius - The Journey of Stoicism</a>
+                                        <a class="blog-title">The Journey of Stoicism</a>
                                         <div class="text-container">
                                             <p class="blog-content-preview">Marcus Aurelius is a famous figure and is frequently talked about even in today's society. Recognized for his feats when he reigned as the Roman Emporer from 161 to 180AD, he is actuaklly more known for his contributions to Stoicism in philosophy. For those of you who are not familiar with philosophy, let me try my best to explain it based on my understanding. </p>
                                         </div>
@@ -54,7 +54,7 @@
                                 <div class="blog-latest-post">
                                     <img src="./Assets/Blog/skullduggery.jfif">
                                     <div class="blog-content-container">
-                                        <a class="blog-title">My Childhood Book Series - Skulduggery Pleasant</a>
+                                        <a class="blog-title">My Childhood Book Series</a>
                                         <div class="text-container">
                                             <p class="blog-content-preview">Magic. The single most used concept in fantasy world-building, and would remain as one of the most popular anchors in many major book and movie series. </p>
                                         </div>
@@ -77,7 +77,7 @@
                                 <div class="blog-latest-post">
                                     <img src="./Assets/Blog/socialmedia.jfif">
                                     <div class="blog-content-container">
-                                        <a class="blog-title">Social Commentary on Social Media</a>
+                                        <a class="blog-title">Social Media Commentary</a>
                                         <div class="text-container">
                                             <p class="blog-content-preview">Ever travelled to Europe? I recently had the opportunity to embark on a 2-week trip to Europe. ver travelled to Europe? I recently had the opportunity to embark on a 2-week trip to Europe.</p>
                                         </div>
@@ -87,7 +87,7 @@
                                 <div class="blog-latest-post">
                                     <img src="./Assets/Blog/healthy.jfif">
                                     <div class="blog-content-container">
-                                        <a class="blog-title">Being a Little Healthier than Yesterday</a>
+                                        <a class="blog-title">Healthier than Yesterday</a>
                                         <div class="text-container">
                                             <p class="blog-content-preview">Marcus Aurelius is a famous figure and is frequently talked about even in today's society. Recognized for his feats when he reigned as the Roman Emporer from 161 to 180AD, he is actuaklly more known for his contributions to Stoicism in philosophy. For those of you who are not familiar with philosophy, let me try my best to explain it based on my understanding. </p>
                                         </div>
@@ -97,7 +97,7 @@
                                 <div class="blog-latest-post">
                                     <img src="./Assets/Blog/unsatisfaction.jfif">
                                     <div class="blog-content-container">
-                                        <a class="blog-title">Unsatisfaction - The World and Cultural Norms</a>
+                                        <a class="blog-title">Unsatisfaction -  A Cultural Norm</a>
                                         <div class="text-container">
                                             <p class="blog-content-preview">Magic. The single most used concept in fantasy world-building, and would remain as one of the most popular anchors in many major book and movie series. </p>
                                         </div>
@@ -123,8 +123,6 @@
         });
     </script>
     <script src="./About/about.js"></script> 
-
-
 </body>
 
 </html>
