--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
         <section>
             <div id="main-content">
                 <div id="main-page">
-                    <div id="main-wrapper">Test</div>
-                    <div id="main-wrapper">Test</div>
-                    <div id="main-wrapper">Test</div>
+                    <p>Hello,</p>
                 </div>
             </div>
         </section>
