--- a/projects.html
+++ b/projects.html
@@ -135,7 +135,7 @@
                                             </a>
                                         </div>
                                         <div class="other-project-container-description">
-                                            A piano app with notes ranging from F2 to E5. Customizable keyboard keys to allow you to play your favourite tunes (limited  functionality on mobile) ! More features coming soon.
+                                            A piano app with notes ranging from F2 to E5. Customizable keyboard keys to allow you to play your favourite tunes (currently not mobile-supported)
                                         </div>
                                         <div class="project-container-techstack">
                                             <p>HTML/CSS</p>
