--- a/about.html
+++ b/about.html
@@ -79,7 +79,12 @@
                     <div class="blue-line"></div>
                     <div class="blue-line"></div>
                     <div class="blue-line"></div>
-
+                    <div class="blue-line"></div>
+                    <div class="blue-line"></div>
+                    <div class="blue-line"></div>
+                    <div class="blue-line"></div>
+                    <div class="blue-line"></div>
+                    <div class="blue-line"></div>
                 </div>
             </div>
             <div id="about-page-1">
