--- a/header.html
+++ b/header.html
@@ -1,6 +1,8 @@
-<div id="profile-pic">
-    <p></p>
-</div>
+<a href="index.html">
+    <div id="profile-pic">
+        <p></p>
+    </div>
+</a>
 <div class="links">
     <a href="about.html">About</a>
     <a href="projects.html">Projects</a>
