--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                 <div id="main-page">
                     <div id="contact-main-wrapper">
                         <div id="contact-header">
-                            <h2>CONTACT ME</h2>
+                            <h2>CONTACT</h2>
                         </div>
                         <div class="content-header-text">
                             <!-- <p>If you are reading this page, chances are you have stumbled upon my website that I have included in my GitHub portfolio or resume.</p> -->
@@ -86,7 +86,7 @@
           $("#footer").load("footer.html"); 
         });
     </script> 
-    <script src="index.js"></script>
+    <script src="./Contact/contact.js"></script>
 
 </body>
 
