--- a/blog.html
+++ b/blog.html
@@ -122,7 +122,7 @@
           $("#footer").load("footer.html"); 
         });
     </script>
-    <script src="./About/about.js"></script> 
+    <script src="./Blog/blog.js"></script> 
 </body>
 
 </html>
