--- a/index.html
+++ b/index.html
@@ -16,14 +16,55 @@
 
 <body> 
     <!-- Section for preloading page animation -->
-    <!-- <section>
+    <section>
         <div id="loading-page">
-            <img src="/Assets/meepit.png">
-            <div id="loading-message">
-                <p>Hello</p>
-            </div>
+            <section class="animated-grid-jw">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div></div>
+                <div></div>
+                <div class="card"></div>
+                <div></div>
+                <div class="card"></div>
+                <div></div>
+                <div class="card"></div>
+                <div></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div></div>
+            </section>
+            <section class="animated-grid-jw2">
+                <div class="card2"></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div class="card2"></div>
+                <div class="card2"></div>
+                <div></div>
+                <div class="card2"></div>
+                <div></div>
+                <div class="card2"></div>
+                <div class="card2"></div>
+                <div></div>
+                <div class="card2"></div>
+                <div></div>
+                <div class="card2"></div>
+                <div class="card2"></div>
+                <div class="card2"></div>
+                <div class="card2"></div>
+                <div class="card2"></div>
+                <div class="card2"></div>
+                <div class="card2"></div>
+                <div class="card2"></div>
+                <div class="card2"></div>
+                <div class="card2"></div>
+                <div class="card2"></div>
+            </section>
         </div>
-    </section> -->
+    </section>
 
     <!-- Section for navigation bar -->
     <header id="nav">
