--- a/projects.html
+++ b/projects.html
@@ -97,27 +97,27 @@
                             <div class="other-project-1">
                                 <div class="project-container">
                                     <div class="project-image">
-                                        <img src="./Assets/Projects/spinwheel-1.png" alt="">
+                                        <img src="./Assets/Projects/pokemontcg-1.png" alt="">
                                     </div>
                                     <div class="project-container2">
                                         <div class="project-container-title">
-                                            <a href="https://foojoowee.github.io/Spin-Wheel/" target="_blank">
-                                                <h2>Spin Wheel App</h2>
+                                            <a href="https://foojoowee.github.io/pokemonTCG/" target="_blank">
+                                                <h2>Pokemon TCG E-Store</h2>
                                             </a>
                                         </div>
                                         <div class="other-project-container-description">
-                                            A customizable spin wheel app, with colour schemes, customizable inputs and optional audio tracks.
+                                            A mock E-Store selling pokemon cards, calling data from the PokemonTCG API with updated prices called from TCGPlayer API. Built with Typescript and React.
                                         </div>
                                         <div class="project-container-techstack">
+                                            <p>Typescript</p>
+                                            <p>ReactJS</p>
                                             <p>HTML/CSS</p>
-                                            <p>Javascript</p>
-                                            <p>ChartJS</p>
                                         </div>
                                         <div class="project-container-icon">
-                                            <a href="https://foojoowee.github.io/Spin-Wheel/" target="_blank">
+                                            <a href="https://foojoowee.github.io/pokemonTCG/" target="_blank">
                                                 <img src="./Assets/ICONS/icon-link.svg" alt="link">
                                             </a>
-                                            <a href="https://github.com/foojoowee/Spin-Wheel" target="_blank">
+                                            <a href="https://github.com/foojoowee/pokemonTCG" target="_blank">
                                                 <img src="./Assets/ICONS/icon-github-black.svg" alt="link">
                                             </a>
                                         </div>
@@ -128,28 +128,28 @@
                                 <div class="project-container">
                                     <div class="project-container3">
                                         <div class="project-container-title">
-                                            <a href="https://foojoowee.github.io/piano-deploy/" target="_blank">
-                                                <h2>Piano App</h2>
+                                            <a href="https://foojoowee.github.io/3.0-Card-Game/" target="_blank">
+                                                <h2>BlackJack Game</h2>
                                             </a>
                                         </div>
                                         <div class="other-project-container-description">
-                                            A piano app with notes ranging from F2 to E5. Customizable keyboard keys to allow you to play your favourite tunes (currently not mobile-supported)
+                                            A generic BlackJack game, including our local Malaysian style rules. Work in progress of making it multiplayer and developing a Texas Hold' Em mode! 
                                         </div>
                                         <div class="project-container-techstack">
                                             <p>HTML/CSS</p>
-                                            <p>ReactJS</p>
+                                            <p>Javascript</p>
                                         </div>
                                         <div class="project-container-icon">
-                                            <a href="https://foojoowee.github.io/piano-deploy/" target="_blank">
+                                            <a href="https://foojoowee.github.io/3.0-Card-Game/" target="_blank">
                                                 <img src="./Assets/ICONS/icon-link.svg" alt="link">
                                             </a>
-                                            <a href="https://github.com/foojoowee/piano-deploy" target="_blank">
+                                            <a href="https://github.com/foojoowee/3.0-Card-Game" target="_blank">
                                                 <img src="./Assets/ICONS/icon-github-black.svg" alt="link">
                                             </a>
                                         </div>
                                     </div>
                                     <div class="project-image-right">
-                                        <img src="./Assets/Projects/piano-1.png" alt="">
+                                        <img src="./Assets/Projects/blackjack-4.png" alt="">
                                     </div>
                                 </div>
                             </div>
